--- a/style.css
+++ b/style.css
@@ -181,8 +181,8 @@ body {
 
 .profile-photo-lg {
   border-radius: 50%;
-  width: 8rem;
-  height: 8rem;
+  width: 6rem;
+  height: 6rem;
 }
 
 /*************************************/
@@ -190,11 +190,11 @@ body {
 
 .top-nav {
   grid-area: top-nav;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--white);
 
   display: grid;
   grid-template-columns: repeat(2,auto);
-  grid-template-rows: 4rem;
+  grid-template-rows: auto;
   align-items: center;
 
   margin: 1rem 0;
@@ -221,7 +221,6 @@ body {
   display: grid;
   grid-template-columns: repeat(3, auto);
   align-items: center;
-  justify-content: center;
   gap: 1rem;
 
   margin-right: 30px;
@@ -242,7 +241,35 @@ body {
 
 .bottom-nav {
   grid-area: bottom-nav;
-  background-color: rgb(253, 220, 59);
+  background-color: var(--white);
+
+  display: grid;
+  grid-template-columns: repeat(2,auto);
+  grid-template-rows: auto;
+  align-items: center;
+
+  margin-left: 2rem;
+}
+
+.greeting {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.greeting div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  font-weight: bold;
+}
+
+.greet-msg{
+  font-size: 1rem;
+}
+
+.profile-name-main {
+  font-size: 1.5rem;
 }
 
 /*************************************/
