Adjust styling of all elements within hero section to create a fluid layout

--- a/style.css
+++ b/style.css
@@ -157,23 +157,27 @@ table {
   --font-2: "Square Peg", cursive;
   --font-3: "Babylonica", cursive;
   --font-4: "Roboto Mono", monospace;
+  --right-side: calc(100vw - 320px);
 }
 
 body {
   font-family: var(--font-4);
+  box-sizing: border-box;
 }
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  grid-template-rows: auto auto 8fr;
+  grid-template-columns: 320px 4fr;
+  grid-template-rows: auto auto fit-content(70vh);
   grid-template-areas:
     "menu top-nav"
     "menu bottom-nav"
     "menu hero";
 
-  height: 100vh;
+    height: fit-content(100vh);
 }
+
+
 
 .icon {
   width: 1.5rem;
@@ -190,6 +194,7 @@ body {
 .top-nav {
   grid-area: top-nav;
   background-color: var(--white);
+ 
 
   display: grid;
   grid-template-columns: repeat(2, auto);
@@ -248,8 +253,9 @@ body {
 
   padding: 0rem 2rem 0.5rem 2rem;
 
-  box-shadow: rgba(155, 155, 155, 0.45) 0px 25px 20px -20px;
+  /* box-shadow: rgba(155, 155, 155, 0.45) 0px 25px 20px -20px; */
 
+  box-shadow: 0px 15px 10px -15px rgba(155, 155, 155, 0.45); 
   margin-bottom: 2px;
 }
 
@@ -305,9 +311,10 @@ div.buttons {
 .menu {
   grid-area: menu;
   background-color: var(--blue);
+  width: 320px;
 
   display: grid;
-  grid-template-columns: 20rem;
+  grid-template-columns: auto;
   grid-template-rows: auto 1fr;
   gap: 2rem;
 }
@@ -352,26 +359,31 @@ div.buttons {
   background-color: var(--grey);
 
   display: grid;
-  grid-template-columns: 2fr auto;
+  grid-template-columns: 2fr 1fr;
   gap: 2rem;
-  padding: 2rem 1rem 3rem 2rem;
-}
+  padding: 0.5rem 0 3rem 2rem;
 
-.cards {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  grid-template-areas: "title title";
-  gap: 2rem;
+  /* height: fit-content(100vh) */
 }
 
 .hero-title {
-  grid-area: title;
   font-size: 1.5rem;
   font-weight: bold;
-
   align-self: end;
+  margin-bottom: -1rem;;
+  margin-right: -2rem;
+}
+.cards {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(315px,500px));
+  grid-template-rows: 5vh repeat(3, minmax(120px,auto));
+  grid-template-areas: "title title";
+  gap: 2rem;
+  margin-right: -4rem;
+}
 
-  margin-bottom: -1.2rem;
+div.cards > div:first-child {
+  grid-area: title;
 }
 
 .card {
@@ -379,17 +391,18 @@ div.buttons {
 
   border-left: 12px solid #f9c784;
   border-radius: 10px;
-  width: clamp(400px, 23vw, 800px);
-  height: clamp(150px, 20vh, 300px);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
     rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
   background-color: var(--white);
-  padding-bottom: 1rem;
+  padding: 2rem 0.5rem 1rem 0.5rem;
+  
 
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
+  /* grid-template-rows: 1fr minmax(84px,140px) 1fr; */
+  grid-template-rows: 1fr clamp(84px, 10vh,140px) 1fr;
   gap: 0.5rem;
+  justify-items: start;
 }
 
 .card div {
@@ -404,7 +417,7 @@ div.buttons {
 }
 
 .card-content {
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: var(--dark-grey);
 }
 
@@ -419,27 +432,19 @@ div.buttons {
 
 .right-side-hero {
   display: grid;
-  grid-template-rows: repeat(2, auto);
-  gap: 4rem;
+  grid-template-rows: 5vh auto 5vh auto;
+  gap: 2rem;
+
+  justify-self: center;
 }
 
 .announcements {
   display: grid;
   gap: 0.5rem;
-
-  /* width: 300px; */
-}
-
-.announcements-title {
-  font-size: 1.5rem;
-  font-weight: bold;
-
-  align-self: end;
 }
 
 .announcements-cards {
   border-radius: 10px;
-  width: 250px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
     rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
   background-color: var(--white);
@@ -447,12 +452,12 @@ div.buttons {
 
   display: grid;
   gap: 1rem;
-  grid-template-rows: repeat(3, 100px);
+  grid-template-rows: repeat(3, 1fr);
+  max-width: 220px;
 }
 
 .announcement-card {
   border-bottom: 1px solid var(--grey);
-  height: auto;
 }
 
 .announcement-card:last-child {
@@ -465,17 +470,14 @@ div.buttons {
 
 .announcement-content {
   color: var(--dark-grey);
-  font-size: 0.9rem;
-}
-
-.trending {
-  display: grid;
-  gap: 0.5rem;
+  font-size: 0.8rem;
+  padding-bottom: 1rem ;
+  /* padding: 1rem; */
 }
 
 .trending-container {
   border-radius: 10px;
-  width: 250px;
+  max-width: 220px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
     rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
   background-color: var(--white);
@@ -483,13 +485,6 @@ div.buttons {
 
   display: grid;
   grid-template-rows: repeat(4, 80px);
-}
-
-.trending-title {
-  font-size: 1.5rem;
-  font-weight: bold;
-
-  align-self: end;
 }
 
 .trending-card {
