Update grid layouts on hero-section to have a more dynamic layout altogether

--- a/style.css
+++ b/style.css
@@ -375,32 +375,34 @@ div.buttons {
 }
 .cards {
   display: grid;
-  grid-template-columns: repeat(2, minmax(315px,500px));
+  grid-template-columns: repeat(auto-fit, 250px);
   grid-template-rows: 5vh repeat(3, minmax(120px,auto));
-  grid-template-areas: "title title";
+
   gap: 2rem;
   margin-right: -4rem;
 }
 
 div.cards > div:first-child {
-  grid-area: title;
+  grid-column: 1 / -1;
 }
 
 .card {
   justify-self: center;
+  align-self: start;
+  height: 200px;
+
 
   border-left: 12px solid #f9c784;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
     rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
   background-color: var(--white);
-  padding: 2rem 0.5rem 1rem 0.5rem;
+  padding: 1rem 0.5rem 1rem 0.5rem;
   
 
   display: grid;
   grid-template-columns: 1fr;
-  /* grid-template-rows: 1fr minmax(84px,140px) 1fr; */
-  grid-template-rows: 1fr clamp(84px, 10vh,140px) 1fr;
+  grid-template-rows: auto 1fr auto;
   gap: 0.5rem;
   justify-items: start;
 }
